--- a/package.json
+++ b/package.json
@@ -17,17 +17,22 @@
         "test:watch": "jest --watch",
         "test:cov": "jest --coverage",
         "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-        "test:e2e": "jest --config ./test/jest-e2e.json",
-        "docker:up": "docker-compose -f ./docker/postgres/docker-compose.yml up -d",
-        "docker:down": "docker-compose -f ./docker/postgres/docker-compose.yml down"
+        "test:e2e": "jest --config ./test/jest-e2e.json"
     },
     "dependencies": {
         "@nestjs/common": "^10.0.0",
         "@nestjs/core": "^10.0.0",
+        "@nestjs/mapped-types": "*",
         "@nestjs/platform-express": "^10.0.0",
-        "@prisma/client": "5.7.1",
+        "@nestjs/typeorm": "^10.0.1",
+        "class-transformer": "^0.5.1",
+        "class-validator": "^0.14.0",
+        "dotenv": "^16.3.1",
+        "pg": "^8.11.3",
         "reflect-metadata": "^0.1.13",
-        "rxjs": "^7.8.1"
+        "rxjs": "^7.8.1",
+        "typeorm": "^0.3.17",
+        "winston": "^3.11.0"
     },
     "devDependencies": {
         "@nestjs/cli": "^10.0.0",
