--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "class-validator": "^0.14.0",
         "dotenv": "^16.3.1",
         "passport": "^0.7.0",
+        "passport-google-oauth20": "^2.0.0",
         "passport-jwt": "^4.0.1",
         "passport-local": "^1.0.0",
         "pg": "^8.11.3",
