--- a/package.json
+++ b/package.json
@@ -29,11 +29,14 @@
         "@nestjs/platform-express": "^10.0.0",
         "@nestjs/serve-static": "^4.0.0",
         "@nestjs/typeorm": "^10.0.1",
+        "@superfaceai/passport-twitter-oauth2": "^1.2.3",
         "bcrypt": "^5.1.1",
         "class-transformer": "^0.5.1",
         "class-validator": "^0.14.0",
         "dotenv": "^16.3.1",
+        "express-session": "^1.17.3",
         "passport": "^0.7.0",
+        "passport-facebook": "^3.0.0",
         "passport-google-oauth20": "^2.0.0",
         "passport-jwt": "^4.0.1",
         "passport-local": "^1.0.0",
