--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,16 @@ DB_PORT=
 DB_PASSWORD=
 DB_USERNAME=
 DB_NAME=
+
+JWT_SECRET=
+
+GOOGLE_CLIENT_ID=
+GOOGLE_SECRET=
+
+TWITTER_CLIENT_ID=
+TWITTER_SECRET=
+
+FE_PROD=
+FE_DEVELOP=
+BE_PROD=
+BE_DEVELOP=
