--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
         "test:e2e": "jest --config ./test/jest-e2e.json"
     },
     "dependencies": {
-        "@nestjs-modules/mailer": "^1.10.3",
         "@nestjs/common": "^10.0.0",
         "@nestjs/config": "^3.1.1",
         "@nestjs/core": "^10.0.0",
@@ -31,6 +30,7 @@
         "@nestjs/serve-static": "^4.0.0",
         "@nestjs/swagger": "^7.2.0",
         "@nestjs/typeorm": "^10.0.1",
+        "@sendgrid/mail": "^8.1.1",
         "@superfaceai/passport-twitter-oauth2": "^1.2.3",
         "bcrypt": "^5.1.1",
         "class-transformer": "^0.5.1",
@@ -57,7 +57,6 @@
         "@types/express": "^4.17.17",
         "@types/jest": "^29.5.2",
         "@types/node": "^20.3.1",
-        "@types/nodemailer": "^6.4.14",
         "@types/passport-jwt": "^4.0.0",
         "@types/supertest": "^2.0.12",
         "@typescript-eslint/eslint-plugin": "^6.0.0",
